@@ -29,7 +29,6 @@ import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.PrivateKey;
 import java.security.PublicKey;
-import java.security.SecureRandom;
 import java.security.spec.AlgorithmParameterSpec;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
@@ -48,6 +47,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import org.apache.camel.component.pqc.PQCKeyEncapsulationAlgorithms;
 import org.apache.camel.component.pqc.PQCSignatureAlgorithms;
+import org.apache.camel.util.SecureRandomHelper;
 import org.bouncycastle.pqc.crypto.lms.LMOtsParameters;
 import org.bouncycastle.pqc.crypto.lms.LMSigParameters;
 import org.bouncycastle.pqc.jcajce.spec.*;
@@ -101,17 +101,17 @@ public class FileBasedKeyLifecycleManager implements KeyLifecycleManager {
         // Initialize with parameter spec if provided
         if (parameterSpec != null) {
             if (parameterSpec instanceof AlgorithmParameterSpec algorithmParamSpec) {
-                generator.initialize(algorithmParamSpec, new SecureRandom());
+                generator.initialize(algorithmParamSpec, SecureRandomHelper.getSecureRandom());
             } else if (parameterSpec instanceof Integer keySize) {
-                generator.initialize(keySize, new SecureRandom());
+                generator.initialize(keySize, SecureRandomHelper.getSecureRandom());
             }
         } else {
             // Use default parameter spec for the algorithm
             AlgorithmParameterSpec defaultSpec = getDefaultParameterSpec(algorithm);
             if (defaultSpec != null) {
-                generator.initialize(defaultSpec, new SecureRandom());
+                generator.initialize(defaultSpec, SecureRandomHelper.getSecureRandom());
             } else {
-                generator.initialize(getDefaultKeySize(algorithm), new SecureRandom());
+                generator.initialize(getDefaultKeySize(algorithm), SecureRandomHelper.getSecureRandom());
             }
         }
 
@@ -248,10 +248,10 @@ public class FileBasedKeyLifecycleManager implements KeyLifecycleManager {
             return null;
         }
 
-        String content = Files.readString(metadataFile, StandardCharsets.UTF_8);
-
-        // Detect format: JSON starts with '{', legacy Java serialization starts with binary
-        if (content.trim().startsWith("{")) {
+        // Detect the format from the raw bytes: a JSON document starts with '{', whereas a legacy
+        // Java-serialized file is binary (and not valid UTF-8), so it must not be read as a String first.
+        byte[] content = Files.readAllBytes(metadataFile);
+        if (isJsonContent(content)) {
             MetadataFileData data = objectMapper.readValue(content, MetadataFileData.class);
             KeyMetadata metadata = data.toKeyMetadata();
             metadataCache.put(keyId, metadata);
@@ -369,6 +369,7 @@ public class FileBasedKeyLifecycleManager implements KeyLifecycleManager {
 
         KeyPair keyPair;
         try (ObjectInputStream ois = new ObjectInputStream(new BufferedInputStream(Files.newInputStream(legacyKeyFile)))) {
+            ois.setObjectInputFilter(KeyMetadataCodec.KEY_PAIR_FILTER);
             keyPair = (KeyPair) ois.readObject();
         }
 
@@ -395,6 +396,7 @@ public class FileBasedKeyLifecycleManager implements KeyLifecycleManager {
 
         KeyMetadata metadata;
         try (ObjectInputStream ois = new ObjectInputStream(new BufferedInputStream(Files.newInputStream(metadataFile)))) {
+            ois.setObjectInputFilter(KeyMetadataCodec.METADATA_FILTER);
             metadata = (KeyMetadata) ois.readObject();
         }
 
@@ -442,6 +444,20 @@ public class FileBasedKeyLifecycleManager implements KeyLifecycleManager {
 
     private Path getLegacyKeyFile(String keyId) {
         return keyDirectory.resolve(keyId + ".key");
+    }
+
+    /**
+     * Detects whether the given file content is a JSON document (the current format) by inspecting the first
+     * non-whitespace byte, without decoding the bytes as text (a legacy Java-serialized file is binary).
+     */
+    private static boolean isJsonContent(byte[] content) {
+        for (byte b : content) {
+            if (b == ' ' || b == '\t' || b == '\n' || b == '\r') {
+                continue;
+            }
+            return b == '{';
+        }
+        return false;
     }
 
     private String determineProvider(String algorithm) {
